# tui-syntax-highlight

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  committed.toml  deny.toml
.githooks/: commit-msg  pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml
examples/: background_color.rs  detect_color_support.rs  highlight.tape  highlight_file.rs  line_iter.rs
examples/highlight_file/: Cargo.toml
examples/highlight_file/src/: main.rs
examples/sqlite_custom/: Cargo.toml  build.rs
examples/sqlite_custom/assets/SQL/: SQLite.sublime-syntax
examples/sqlite_custom/dumps/: sqlite.packdump
examples/sqlite_custom/src/: main.rs
ratatui-syntax/: Cargo.toml
ratatui-syntax/src/: lib.rs
src/: convert.rs  highlighted_text.rs  highlighter.rs  lib.rs
tests/: highlight_test.rs  test.rs
tests/assets/: test_file.rs
tests/snapshots/: highlight_test__highlight_file_ansi.snap  highlight_test__highlight_range.snap  highlight_test__highlighter.snap  highlight_test__highlighter_no_line_numbers.snap  highlight_test__highlighter_override_bg.snap  highlight_test__highlighter_template.snap  test__highlight_file_ansi.snap  test__highlighter.snap  test__highlighter_no_line_numbers.snap  test__highlighter_override_bg.snap  test__highlighter_template.snap
utils/pack-theme/: Cargo.toml
utils/pack-theme/src/: main.rs
