[package]
name = "tui-syntax-highlight"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.88"

[workspace]
resolver = "3"
members = ["./examples/sqlite_custom"]

[dependencies]
ratatui = { version = "0.29", default-features = false }
ratatui-core = { version = "0.1.0-alpha.6", features = ["anstyle"] }
syntect = { version = "5", default-features = false, features = ["parsing"] }
termprofile = { git = "https://github.com/aschey/termprofile", rev = "a6d910dec7b9b035e44d7276536589e2faf8ad66", default-features = false, features = [
  "convert",
  "ratatui",
], optional = true }

[features]
regex-fancy = ["syntect/regex-fancy"]
regex-onig = ["syntect/regex-onig"]
color-cache = ["termprofile?/color-cache"]
profile = ["termprofile"]
terminfo = ["termprofile?/terminfo"]
default = ["regex-onig"]

[dev-dependencies]
insta = "1.43"
ratatui = { version = "0.29" }
syntect = { version = "5", default-features = false, features = [
  "default-syntaxes",
  "default-themes",
] }
syntect-assets = "0.23"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
allow_attributes = "deny"
doc_markdown = "warn"
default_trait_access = "warn"
ignored_unit_patterns = "warn"
semicolon_if_nothing_returned = "warn"
missing_fields_in_debug = "warn"
use_self = "warn"
impl_trait_in_params = "warn"
missing_panics_doc = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
redundant_closure_for_method_calls = "warn"
