[package]
name = "sqlite_custom"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
ratatui = { version = "0.29" }
syntect = { version = "5", default-features = false, features = [
  "yaml-load",
  "plist-load",
] }
tui-syntax-highlight = { path = "../.." }


[build-dependencies]
syntect = { version = "5", default-features = false, features = [
  "yaml-load",
  "plist-load",
  "regex-fancy",
] }
